name:                snaplet-bloodhound
version:             0.1.0.0
synopsis:            A snaplet wrapping access to ElasticSearch via the bloodhound package.
description:         A boilerplate snaplet to conveniently allow bloodhound ElasticSearch
                     functions to be used in snap handlers.
license:             BSD3
license-file:        LICENSE
author:              Samuel Yallop
maintainer:          syallop@gmail.com
category:            Web, Snap, Database, Search
build-type:          Simple

extra-source-files:  LICENSE
                   , README.md

cabal-version:       >=1.2

library
  exposed-modules:     Snap.Snaplet.Bloodhound
  other-extensions:    FlexibleContexts, FlexibleInstances, OverloadedStrings, Rank2Types, TemplateHaskell, UndecidableInstances
  build-depends:       base
                     , bloodhound
                     , configurator
                     , http-client
                     , lens
                     , mtl
                     , snap

  hs-source-dirs:      src
  default-language:    Haskell2010

